# zeek-agent-v2

./: .clang-format  .clang-tidy  .clang-tidy.ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .swift-format  .update-changes.cfg  CHANGES  CMakeLists.txt  LICENSE  Makefile  Package.swift  README.md  TODO.md  VERSION  configure  vcpkg.json
.github/: dependabot.yml
.github/workflows/: main.yml
aux/: autodoc-to-md  autodoc-to-zeek  md-to-toc  pycodestyle.cfg  run-clang-tidy  update-readme
auxil/: autodoc-to-md  autodoc-to-zeek  format-zeek-script  md-to-toc  run-clang-tidy  update-license-headers  update-readme  zeek-agent.excalidraw
cmake/: BPF.cmake  CheckCompiler.cmake  CheckFunctions.cmake  TargetOptions.cmake  Util.cmake
packaging/: CMakeLists.txt  license.html  welcome.html.in  zeek-agent.cfg.template
packaging/darwin/: Info.plist.in  ZeekAgent.icns  codesign  codesign-wrapper  codesign.cmake  conclusion.html  create-installer  distribution.plist  embedded.provisionprofile  entitlements.plist  entitlements.plist.agent  entitlements.plist.app  entitlements.plist.network-extension  hdiutil-with-codesign  notarize  org.zeek.zeek-agent.plist  org.zeek.zeek-agent.plist.in  post-build.cmake  postinstall  pre-build.cmake  preinstall  product.plist  startup.sh  test-codesign  uninstall-zeek-agent
packaging/darwin/ZeekAgent.app/: CMakeLists.txt  Info.plist.agent.in  Info.plist.network-extension.in  NetworkExtension.swift  ZeekAgent.icns  embedded.provisionprofile.agent  embedded.provisionprofile.app  embedded.provisionprofile.network-extension  main.swift
packaging/windows/: appicon.rc  wix-extra.xml.in  wix-patch.xml  wix-string-overrides.wxl
src/: CMakeLists.txt  config.h.in  main.cc
src/core/: CMakeLists.txt  configuration.cc  configuration.h  database.cc  database.h  logger.cc  logger.h  scheduler.cc  scheduler.h  signal.cc  signal.h  signal.posix.cc  signal.windows.cc  sqlite.cc  sqlite.h  table.cc  table.h
src/io/: CMakeLists.txt  console.cc  console.h  zeek.cc  zeek.h
src/platform/: CMakeLists.txt  platform.h  testing.cc
src/platform/darwin/: CMakeLists.txt  CPPLINT.cfg  endpoint-security.h  endpoint-security.mm  es.cc  es.h  network-extension.h  network-extension.mm  os-log-sink.h  os-log-sink.mm  platform.h  platform.mm  xpc.h  xpc.mm
src/platform/darwin/ZeekAgent.app/: CMakeLists.txt  ExtensionManager.swift  Info.plist.agent.in  Info.plist.app.in  XPC.swift  embedded.provisionprofile.agent  embedded.provisionprofile.app  main.swift
src/platform/linux/: CMakeLists.txt  bpf.cc  bpf.h  platform.cc  platform.h
src/platform/windows/: CMakeLists.txt  platform.cc  platform.h  windows.cc
src/tables/: CMakeLists.txt
src/tables/files/: CMakeLists.txt  files.cc  files.h  files.posix.cc  files.test.cc  files.windows.cc
src/tables/processes/: CMakeLists.txt  processes.darwin.cc  processes.h  processes.linux.bpf.c  processes.linux.cc  processes.linux.event.h  processes.test.cc  processes.windows.cc
src/tables/sockets/: CMakeLists.txt  sockets.darwin.cc  sockets.h  sockets.linux.bpf.c  sockets.linux.cc  sockets.linux.event.h  sockets.test.cc  sockets.windows.cc
src/tables/system-logs/: ActivityStreamSPI.h  CMakeLists.txt  system_logs.darwin.cc  system_logs.h  system_logs.linux.cc  system_logs.test.cc
src/tables/system_logs/: CMakeLists.txt  system_logs.darwin.cc  system_logs.h  system_logs.linux.cc  system_logs.test.cc  system_logs.windows.cc
src/tables/users/: CMakeLists.txt  users.darwin.mm  users.h  users.linux.cc  users.test.cc  users.windows.cc
src/tables/zeek_agent/: CMakeLists.txt  zeek_agent.darwin.mm  zeek_agent.h  zeek_agent.linux.cc  zeek_agent.test.cc  zeek_agent.windows.cc
src/util/: CMakeLists.txt  ascii-table.cc  ascii-table.h  color.h  filesystem.h  fmt.h  helpers.cc  helpers.h  pimpl.h  platform.cc  platform.darwin.cc  platform.darwin.h  platform.darwin.mm  platform.h  platform.linux.cc  platform.posix.cc  platform.testing.cc  platform.windows.cc  platform.windows.h  result.cc  result.h  socket.cc  socket.h  socket.no-ipc.cc  socket.posix.cc  testing.h  threading.cc  threading.h  variant.h  windows-util.cc  windows-util.h
tests/: Makefile  btest.cfg  test-setup.zeek  zeek-agent.cfg
tests/Baseline/zeek-agent.query/: zeek..stdout
tests/Baseline/zeek-agent.scheduled/: zeek..stdout
tests/Baseline/zeek.log/: changes
tests/Baseline/zeek.query/: zeek.output
tests/Baseline/zeek.scheduled/: zeek.output
tests/Scripts/: canonifier  get-zeek-env
tests/agent/: ctest.sh
tests/zeek/: error.zeek  if-missing-table.zeek  log.zeek  query.zeek  requires-table.zeek  scheduled.zeek
tests/zeek-agent/: ctest.sh  error.zeek  framework.sh  log.zeek  query.zeek  scheduled.zeek
tests/zeek/table/: authorized-keys.zeek  files.zeek  processes.zeek  sockets.zeek  ssh.zeek  system_logs.zeek  users.zeek
zeek/ZeekAgent/: __load__.zeek  api.zeek  main.zeek  types.zeek
